--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -1,15 +1,15 @@
-/* 
+/*
 
-Smoothy Template 
+Smoothy Template
 
 http://www.templatemo.com/tm-396-smoothy
 
 */
 
 html, body {
-	font-family: 'Raleway', "Trebuchet MS", Arial, Helvetica, sans-serif; 
-	padding: 0px; 
-	margin: 0px; 
+	font-family: 'Raleway', "Trebuchet MS", Arial, Helvetica, sans-serif;
+	padding: 0px;
+	margin: 0px;
 	color: #8a8a8a;
 }
 
@@ -39,10 +39,10 @@ h1	{	font-size: 1.5em;
 	padding: 10px 8px;
 	float: left;
 	}
-	
+
 h2	{ font-size: 24px; color: #333333; }
 
-.templatemo_reasonbg h2, .templatemo_blog h2 { color: #ffffff; }
+.templatemo_reasonbg h2, .templatemo_blog h2 { color: #000; }
 
 img {
   	max-width: 100%;
@@ -193,7 +193,7 @@ img {
 	border-radius: 5px;
 	font-size: 32px;
 	color: #ffffff;
-} 
+}
 
 .hover-box {
     position: absolute;
@@ -232,17 +232,17 @@ img {
 }
 
 .templatemo_reasonbg {
-	background: url(../images/templatemo_reasonbg.jpg) no-repeat;
+	background:#66ff99 no-repeat;
 	background-position: center;
 	padding: 30px 0px 70px 0px;
 	color: #ffffff;
 	text-align: center;
 }
 
-.templatemo_reasonbg p { color: #ffffff; }
+.templatemo_reasonbg p { color: #000; }
 
 .templatemo_reasonbg div.fa {
-	font-size: 40px;
+	font-size: 60px;
 	margin: 10px 8px;
 }
 
@@ -279,10 +279,10 @@ img {
 	text-align: center;
 }
 .templatemo_blog p { padding-bottom: 50px; }
-.templatemo_wrapperblogbox	{	
+.templatemo_wrapperblogbox	{
 	float: left;
 }
-.templatemo_wrapperblogbox a.fa	{ 
+.templatemo_wrapperblogbox a.fa	{
 	padding: 8px;
 	background: #c6cfd3;
 	color: #ffffff;
@@ -385,7 +385,7 @@ img {
   margin: 50px 0;
   position: relative;
 }
-.slideshow { 
+.slideshow {
   margin: auto;
   width: 80%;
 }
@@ -464,7 +464,7 @@ img {
 }
 .addr ul li {
   list-style-type: none;
-} 
+}
 .addr ul li i {
   width: 14px;
   margin-right: 10px;
@@ -490,7 +490,7 @@ img {
 }
 .templatemo_footer ul li:before {
     content: "\002022 ";
-    color: #72b842; 
+    color: #72b842;
 	font-size: 2.5em;
     vertical-align: middle;
 	line-height: 30px;
@@ -520,9 +520,9 @@ img {
 }
 .templatemo_footer span.left.fa-envelope { font-size: 1.2em;}
 
-.templatemo_bottom	{ 
-	padding: 15px 0px; 
-	width: 100%; 
+.templatemo_bottom	{
+	padding: 15px 0px;
+	width: 100%;
 	background: #333536;
 	}
 .templatemo_bottom .left { float: left;}
@@ -569,19 +569,19 @@ ul.footer_gallery li { display: block; float: left; margin: 0 5px 5px 0 }
 ul.footer_gallery li img { }
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 320px) 
+@media only screen
+and (min-device-width : 320px)
 and (max-width : 480px) {
-	/*.mainMenu li a {		
+	/*.mainMenu li a {
 		font-size: 8px;
 	}
-	#top-menu li a {		
+	#top-menu li a {
 		font-size: 8px;
 	}*/
 	#top-menu li a	{ padding: 0px;}
 	#top-menu li.active a {
     color: #ffffff;
-	background: #72b842;	
+	background: #72b842;
 	}
 	.templatemo_col12	{
 		width: 100%;
@@ -619,7 +619,7 @@ and (max-width : 480px) {
 	margin-top: 10px;
 	}
 	.mailme {
-		
+
 	}
 	.logo {
 		text-align: center;
@@ -656,7 +656,7 @@ and (max-width : 480px) {
 	background: #72b842;
 	line-height: 40px;
 	}
-	
+
   .teamInfo ul li {
     width: 50%;
   }
@@ -724,8 +724,8 @@ and (max-width : 480px) {
 	.templatemo_container {
 	width: 100%;
 	}
-	
-	.templatemo_container .mainMenu li a { 
+
+	.templatemo_container .mainMenu li a {
 	padding: 10px;
 	}
 	.templatemo_margintop10	{
@@ -757,8 +757,8 @@ and (max-width : 480px) {
   }
 }
 
-@media only screen 
-and (min-device-width : 320px) 
+@media only screen
+and (min-device-width : 320px)
 and (max-width : 540px)	{
 	.templatemo_clientwrapper	{ width: 320px; font-size: 12px;}
 	.templatemo_clientwrapper .next{ margin-top: 20px;}
@@ -767,8 +767,8 @@ and (max-width : 540px)	{
 }
 
 /* iPads (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 768px) 
+@media only screen
+and (min-device-width : 768px)
 and (max-device-width : 1024px) {
 	#slider-direction-nav,
 	#slider-control-nav { opacity: 1; }
